Tue Jun 22 04:29:00 Kirk Haines <khaines@ruby-lang.org>

	* eval.c: Bug #1886 [ruby-core:24767]; ensure that rb_exc_raise and rb_exc_fatal require an exception object. Backport of r24403.
	* test/ruby/test_exception.rb: test for exception change. Backport of r24404.

Sat Jun 12 07:34:00 Kirk Haines <khaines@ruby-lang.org>

	* configure.in: Backport #1710 [ruby-core:24104]; backport of r20573 to clean up handling of LIBPATHFLAG. r28291

Thu Jun 10 22:50:00 Kirk Haines <khaines@ruby-lang.org>

	* lib/uri/generic.rb: Backport #2428 [ruby-core:27019]; fixed #eql? so that it can handle being passed a nil value. r28255
	* test/generic/test_generic.rb: added a test for the fix to #eql?. r28255

Thu Jun 10 06:46:00 Kirk Haines <khaines@ruby-ang.org>

	* ext/nkf/nkf-utf8/nkf.c: Backport #2953 [ruby-dev:40606]; change nkf_char buffer in numchar_getc() size form 8 to 10 to avoid potential for a segfault. r28242

	* test/nkf/test_nkf.rb: Added a test for the change. r28242

Thu Jun 10 01:40:00 Kirk Haines <khaines@ruby-lang.org>

	* lib/delegate.rb: Backport #1781 [ruby-core:24356]; allow a block to be properly passed through. r28239

Wed Jun 9 04:35:00 Kirk Haines <khaines@ruby-lang.org>

	* gc.c: Backport #1785 [ruby-core:24395]; check to make sure finalizer_table isn't null before trying to run finalizers. r28235

Wed Jun 9 02:10:00 Kirk Haines <khaines@ruby-lang.org>

	* lib/pathname.rb: Backport #2110 [ruby-core:25627]; backport of r23093 to handle the scenario where, on filesystems like Windows', paths are compared using casecmp instead of ==. r28234

Wed Jun 9 01:42:00 Kirk Haines <khaines@ruby-lang.org>

	* lib/date.rb:  Backport #2707 [ruby-core:28011]; backport r27014 to fix problem with Date#>> and very small numbers. r28233

Wed Jun 9 01:05:00 Kirk Haines <khaines@ruby-lang.org>

	* lib/monitor.rb:  Backport #2240 [ruby-core:26185]; backport r25420 to ensure that the scheduled thread is alive when a monitor is released. r28232