@@ -2386,11 +2386,7 @@ rb_Float(val)
 
       default:
       {
-	  VALUE f = rb_convert_type(val, T_FLOAT, "Float", "to_f");
-	  if (isnan(RFLOAT(f)->value)) {
-	      rb_raise(rb_eArgError, "invalid value for Float()");
-	  }
-	  return f;
+	  return rb_convert_type(val, T_FLOAT, "Float", "to_f");
       }
     }
 }
