@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2010-06-23"
 #define RUBY_VERSION_CODE 186
 #define RUBY_RELEASE_CODE 20100623
-#define RUBY_PATCHLEVEL 416
+#define RUBY_PATCHLEVEL 417
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
